# cagenet

src/cagenet/preprocess/: CMakeLists.txt  calculate_cage_weights.cpp  mvc.cpp
src/cagenet/preprocess/test_data/: mesh000.off  mesh000_ec.off
